loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: Missing closing brace `}' assumed here
var nbBag = 0
^Poucet1:25: error: ';' expected but 'else' found.
  else{ 
  ^